# starship

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clickable.json  harbour-starship.desktop  harbour-starship_config.h.in  main.cpp  starfish.pro  starfish.pro.user.340c1d3  starship.pro  telescope.pri  version.pri
.github/workflows/: main.yml
harbour-starfish/: harbour-starfish.desktop  harbour-starfish.pro
harbour-starfish/qml/: harbour-starfish.qml
harbour-starfish/qml/cover/: CoverPage.qml
harbour-starfish/qml/pages/: InfoPage.qml  LoadingPage.qml  LocationPicker.qml  MainMenuPage.qml  WatchSelectionPage.qml  WeatherSettingsDialog.qml
harbour-starfish/qml/pullDownMenus/: StarfishPullDownMenu.qml
harbour-starfish/src/: harbour-starfish.cpp
harbour-starfish/translations/: harbour-starfish-de.ts  harbour-starfish.ts
harbour-starship/: harbour-starship.pro
harbour-starship/qml/: harbour-starship.qml
harbour-starship/qml/pages/: LoadingPage.qml  MainMenuPage.qml  WeatherSettingsDialog.qml
harbour-starship/qml/pullDownMenus/: StarshipPullDownMenu.qml
harbour-starship/src/: harbour-starship.cpp
harbour-starship/translations/: harbour-starship-de.ts
po/: telescope.asteroidos.pot
qml/: starfish.qml
qml/cover/: CoverPage.qml
qml/pages/: InfoPage.qml  MainMenuPage.qml  WatchSelectionPage.qml  WeatherSettingsDialog.qml
rpm/: harbour-starfish.changes.in  harbour-starfish.changes.run.in  harbour-starfish.spec  harbour-starfish.yaml  harbour-starship.changes.in  harbour-starship.changes.run.in  harbour-starship.spec  harbour-starship.yaml  starfish.spec
src/: harbour-starship.cpp
starfish/: .gitignore  main.cpp  servicecontrol.cpp  servicecontrol.h  starfish.desktop  starfish.pro  starfish.qrc  watch.cpp  watch.h  watches.cpp  watches.h
starfish/qml/: starfish.qml
starfish/qml/pages/: InfoPage.qml  LoadingPage.qml  LocationPicker.qml  WatchesPage.qml
starfishd/: .gitignore  dbusinterface.cpp  dbusinterface.h  main.cpp  sailfishplatform.cpp  sailfishplatform.h  starfishd.pro  starfishd.service  telescoped.pri  ubuntuplatform.cpp  ubuntuplatform.h  utouch_main.cpp  watchesmanager.cpp  watchesmanager.h
starfishd/bluez/: bluezclient.cpp  bluezclient.h
starfishd/libwatchfish/: calendarevent.cpp  calendarevent.h  calendarsource.cpp  calendarsource.h  calendarsource_p.h  com.Meego.MainVolume2.xml  libwatchfish.pri  libwatchfish.pro  musiccontroller.cpp  musiccontroller.h  musiccontroller_p.h  notification.cpp  notification.h  notificationmonitor.cpp  notificationmonitor.h  notificationmonitor_p.h  org.nemomobile.voicecall.VoiceCall.xml  org.nemomobile.voicecall.VoiceCallManager.xml  voicecallcontroller.cpp  voicecallcontroller.h  voicecallcontroller_p.h  volumecontroller.cpp  volumecontroller.h  volumecontroller_p.h  walltimemonitor.cpp  walltimemonitor.h  walltimemonitor_p.h
telescope/: main.cpp  manifest.json.in  servicecontrol.cpp  servicecontrol.h  telescope.apparmor  telescope.desktop  telescope.pro  telescope.qrc
telescope/qml/: telescope.qml
telescope/qml/pages/: InfoPage.qml  (+5 more)
telescopebe/: backend.cpp  backend.h  mytype.cpp  mytype.h  qmldir  telescopebe.pro
